# yottorrent

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  file_io.cpp  file_io.hpp  generate_id.hpp  main.cpp
bencode/: bencode_parser.cpp  bencode_parser.hpp
input/: file_io.cpp
p2p_manager/: block.hpp  file_storage.hpp  master_manager.hpp  piece.hpp  piece_manager.hpp
peer/: peer_connection.hpp
peer/bitfield/: bitfield.hpp
peer/handshake/: handshake.cpp  handshake.hpp
peer/message/: message.hpp
torrent_file/: bencode_parser.cpp  bencode_parser.hpp
tracker/: tracker.cpp  tracker.hpp
